--- a/index.html
+++ b/index.html
@@ -76,6 +76,38 @@
         </div>
     </header>
 
+
+    <!-- FOOTER -->
+
+    <footer>
+        <div id="footer-container">
+            <div class="footer-item">
+                <h2>À propos</h2>
+                <ul>
+                    <li>Fonctionnement du site</li>
+                    <li>Conditions générales</li>
+                    <li>Données et confidentialité</li>
+                </ul>
+            </div>
+
+            <div class="footer-item">
+                <h2>Nos hébergements</h2>
+                <ul>
+                    <li>Charte qualité</li>
+                    <li>Proposer votre hôtel</li>
+                </ul>
+            </div>
+
+            <div class="footer-item">
+                <h2>Assistance</h2>
+                <ul>
+                    <li>Centre d’aide</li>
+                    <li>Nous contacter</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
     
     <script src="https://kit.fontawesome.com/c25fb28717.js" crossorigin="anonymous"></script>
 
