adding main section + css for header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booki - Trouver votre hébergement pour des vacances de rêve </title>
     <link rel="stylesheet" href="CSS/style.css">
+    <script src="https://kit.fontawesome.com/c25fb28717.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -32,7 +33,7 @@
 
         <form method="post">
             <div id="search-box">
-                <img id="location" src="images/Location.png" alt="Location">
+                <i class="fa-solid fa-location-dot"></i>
                 <input type="search" value="Marseille, France" id="search">
                 <button id="search-button">
                     <span id="search-text">Recherche</span>
@@ -76,7 +77,246 @@
         </div>
     </header>
 
+    <!-- Hébergements à Marseille -->
 
+    <main>
+        <section id="container">
+            <div id="container-house">
+                <h2>Hébergements à Marseille</h2>
+                <div class="container-picture">
+                    <div class="container-box">
+                        <a href="#">
+                            <div class="img-house">
+                                <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                                    alt="Auberge la Canebière">
+                            </div>
+                            <div class="house-text">
+                                <h3>Auberge la Canebière</h3>
+                                <p>Nuit à partir de 25€</p>
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star star-grey"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="container-box">
+                        <a href="#">
+                            <div class="img-house">
+                                <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                                    alt="Hôtel du port">
+                            </div>
+                            <div class="house-text">
+                                <h3>Hôtel du port</h3>
+                                <p>Nuit à partir de 52€</p>
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star star-grey"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="container-box">
+                        <a href="#">
+                            <div class="img-house">
+                                <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                                    alt="Hôtel Les mouettes">
+                            </div>
+                            <div class="house-text">
+                                <h3>Hôtel Les mouettes</h3>
+                                <p>Nuit à partir de 76€</p>
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star star-grey"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="container-box">
+                        <a href="#">
+                            <div class="img-house">
+                                <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                                    alt="Hôtel de la mer">
+                            </div>
+                            <div class="house-text">
+                                <h3>Hôtel de la mer</h3>
+                                <p>Nuit à partir de 46€</p>
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star star-grey"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="container-box">
+                        <a href="#">
+                            <div class="img-house">
+                                <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                                    alt="Auberge Le Panier">
+                            </div>
+                            <div class="house-text">
+                                <h3>Auberge Le Panier</h3>
+                                <p>Nuit à partir de 23€</p>
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star star-grey"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="container-box">
+                        <a href="#">
+                            <div class="img-house">
+                                <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                                    alt="Hôtel Chez Amina">
+                            </div>
+                            <div class="house-text">
+                                <h3>Hôtel Chez Amina</h3>
+                                <p>Nuit à partir de 96€</p>
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star star-grey"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <a href="#" class="view-more">Afficher plus</a>
+                </div>
+            </div>
+
+            <!-- Les plus populaires -->
+
+            <div id="popular">
+                <div id="popular-icon">
+                    <h2>Les plus populaires</h2>
+                    <i class="fa-solid fa-chart-line"></i>
+                </div>
+                <div id="popular-container-all">
+                    <div class="popular-container">
+                        <a href="#">
+                            <div class="popular-house">
+                                <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                                    alt="Hôtel Le soleil du matin">
+                            </div>
+                            <div class="house-text-popular">
+                                <h3>Hôtel Le soleil du matin</h3>
+                                <p>Nuit à partir de 128€</p>
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star star-grey"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="popular-container">
+                        <a href="#">
+                            <div class="popular-house">
+                                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                                    alt="Hôtel Le soleil du matin">
+                            </div>
+                            <div class="house-text-popular">
+                                <h3>Chambres d’hôtes Au cœur de l’eau</h3>
+                                <p>Nuit à partir de 71€</p>
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star star-grey"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="popular-container">
+                        <a href="#">
+                            <div class="popular-house">
+                                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                                    alt="Hôtel Le soleil du matin">
+                            </div>
+                            <div class="house-text-popular">
+                                <h3>Hôtel Bleu et Blanc</h3>
+                                <p>Nuit à partir de 68€</p>
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star star-grey"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Activités à Marseille -->
+
+        <section id="activity">
+            <h2>Activités à Marseille</h2>
+            <div id="activity-container">
+                <div class="activity-box">
+                    <a href="#">
+                        <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                            alt="Vieux-Port">
+                        <p class="activity-text">Vieux-Port</p>
+                    </a>
+                </div>
+
+                <div class="activity-box">
+                    <a href="#">
+                        <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                            alt="Fort de Pomègues">
+                        <p class="activity-text">Fort de Pomègues</p>
+                    </a>
+                </div>
+
+                <div class="activity-box">
+                    <a href="#">
+                        <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                            alt="Parc national des Calanques">
+                        <p class="activity-text">Parc national des Calanques</p>
+                    </a>
+                </div>
+
+                <div class="activity-box">
+                    <a href="#">
+                        <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                            alt="Notre-Dame-de-la-Garde">
+                        <p class="activity-text">Notre-Dame-de-la-Garde</p>
+                    </a>
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- FOOTER -->
 
     <footer>
@@ -107,9 +347,6 @@
             </div>
         </div>
     </footer>
-
-    
-    <script src="https://kit.fontawesome.com/c25fb28717.js" crossorigin="anonymous"></script>
 
 </body>
 
