adding css for search form, main, footer

--- a/index.html
+++ b/index.html
@@ -29,18 +29,14 @@
             <p>En plein centre ville ou en plaine nature </p>
         </div>
 
-        <!-- SEARCH -->
-
-        <form method="post">
-            <div id="search-box">
-                <i class="fa-solid fa-location-dot"></i>
-                <input type="search" value="Marseille, France" id="search">
-                <button id="search-button">
-                    <span id="search-text">Recherche</span>
-                    <span id="search-icon"><i class="fa-solid fa-magnifying-glass"></i></span>
-                </button>
-            </div>
+        <!-- Search form -->
+        <form class="search-form">
+            <label class="location-icon"><i class="fa fa-location-dot"></i></label>
+            <input class="search-input" type="search" name="search" placeholder="Marseille, France"/>
+            <button class="search-btn-text" type="submit">Rechercher</button>
+            <button class="search-btn-icon" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
+
 
         <!-- FILTERS -->
 
